--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # next.js
 /.next/
+/src/.next/
 /out/
 
 # production
@@ -29,9 +30,13 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+
+# team
+notes.md
