--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/luxon": "^2.11.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.4",
+    "@ukstv/jazzicon-react": "^1.0.0",
+    "@walletconnect/web3-provider": "^1.7.0",
+    "ethers": "^5.5.2",
+    "history": "^5.1.0",
+    "mdi-react": "^8.2.0",
     "next": "12.0.7",
+    "polished": "^4.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
+    "@types/luxon": "^1.26.4",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.7",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "source-map-explorer": "^2.5.2",
     "typescript": "4.5.4"
   }
 }
