--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ethers": "^5.5.2",
     "history": "^5.1.0",
     "mdi-react": "^8.2.0",
-    "next": "12.0.7",
+    "next": "^12.0.8-canary.8",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -30,6 +30,7 @@
     "@types/react": "17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.7",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "source-map-explorer": "^2.5.2",
