--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
+    "swr": "^1.1.1",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
