--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
     "@date-io/luxon": "^2.11.1",
@@ -26,15 +27,24 @@
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@storybook/addon-actions": "^6.4.14",
+    "@storybook/addon-essentials": "^6.4.14",
+    "@storybook/addon-links": "^6.4.14",
+    "@storybook/react": "^6.4.14",
     "@types/luxon": "^1.26.4",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.7",
+    "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "eslint-plugin-storybook": "^0.5.6",
+    "sb": "^6.4.14",
     "source-map-explorer": "^2.5.2",
+    "swc": "^1.0.11",
     "typescript": "4.5.4"
   }
 }
