--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@date-io/luxon": "^2.11.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@mantine/core": "^3.6.5",
+    "@mantine/hooks": "^3.6.5",
     "@mui/material": "^5.2.4",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.0",
     "ethers": "^5.5.2",
+    "graphql": "^16.3.0",
     "history": "^5.1.0",
-    "mdi-react": "^8.2.0",
     "next": "^12.0.8-canary.8",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
     "swr": "^1.1.1",
+    "urql": "^2.0.6",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
