--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
+    "@storybook/addons": "^6.4.18",
     "@storybook/react": "^6.4.14",
+    "@storybook/theming": "^6.4.18",
     "@types/luxon": "^1.26.4",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
