--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token=17617c85151f"
   },
   "dependencies": {
     "@date-io/luxon": "^2.11.1",
@@ -45,6 +46,7 @@
     "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
+    "chromatic": "^6.4.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-storybook": "^0.5.6",
