--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-storybook": "^0.5.6",
+    "jest": "^27.5.1",
     "sb": "^6.4.14",
     "source-map-explorer": "^2.5.2",
     "swc": "^1.0.11",
