--- a/package.json
+++ b/package.json
@@ -51,10 +51,15 @@
     "eslint-config-next": "12.0.7",
     "eslint-plugin-storybook": "^0.5.6",
     "jest": "^27.5.1",
+    "msw": "^0.38.1",
+    "msw-storybook-addon": "^1.6.0",
     "react-test-renderer": "^17.0.2",
     "sb": "^6.4.14",
     "source-map-explorer": "^2.5.2",
     "swc": "^1.0.11",
     "typescript": "4.5.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
