--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.2.4",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.0",
+    "email-validator": "^2.0.4",
     "ethers": "^5.5.2",
     "graphql": "^16.3.0",
     "history": "^5.1.0",
