--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-test-renderer": "^17.0.2",
     "sb": "^6.4.14",
     "source-map-explorer": "^2.5.2",
+    "storybook-addon-next-router": "^3.1.1",
     "swc": "^1.0.11",
     "typescript": "4.5.4"
   },
