--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token=17617c85151f"
   },
   "dependencies": {
@@ -17,12 +17,12 @@
     "@mantine/hooks": "^3.6.5",
     "@mui/material": "^5.2.4",
     "@ukstv/jazzicon-react": "^1.0.0",
-    "@walletconnect/web3-provider": "^1.7.0",
+    "@walletconnect/web3-provider": "^1.7.3",
     "email-validator": "^2.0.4",
-    "ethers": "^5.5.2",
+    "ethers": "^5.5.4",
     "graphql": "^16.3.0",
     "history": "^5.1.0",
-    "next": "^12.0.8-canary.8",
+    "next": "^12.1.0",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -34,12 +34,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
-    "@storybook/addon-actions": "^6.4.14",
-    "@storybook/addon-essentials": "^6.4.14",
-    "@storybook/addon-links": "^6.4.14",
-    "@storybook/addons": "^6.4.18",
-    "@storybook/react": "^6.4.14",
-    "@storybook/theming": "^6.4.18",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addons": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/theming": "^6.4.19",
     "@types/luxon": "^1.26.4",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
@@ -47,17 +49,21 @@
     "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
+    "buffer": "^6.0.3",
     "chromatic": "^6.4.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
-    "eslint-plugin-storybook": "^0.5.6",
+    "eslint-plugin-storybook": "^0.5.7",
     "jest": "^27.5.1",
     "msw": "^0.38.1",
-    "msw-storybook-addon": "^1.6.0",
+    "msw-storybook-addon": "^1.6.1",
+    "os-browserify": "^0.3.0",
     "react-test-renderer": "^17.0.2",
     "sb": "^6.4.14",
     "source-map-explorer": "^2.5.2",
     "storybook-addon-next-router": "^3.1.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "swc": "^1.0.11",
     "typescript": "4.5.4"
   },
