--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "chromatic": "npx chromatic --project-token=17617c85151f"
   },
   "dependencies": {
-    "@date-io/luxon": "^2.11.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mantine/core": "^3.6.5",
@@ -22,6 +21,7 @@
     "ethers": "^5.5.4",
     "graphql": "^16.3.0",
     "history": "^5.1.0",
+    "luxon": "^2.3.1",
     "next": "^12.1.0",
     "polished": "^4.1.3",
     "react": "17.0.2",
