--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@ensdomains/ens-avatar": "^0.1.1",
     "@mantine/core": "^3.6.5",
     "@mantine/hooks": "^3.6.5",
     "@mui/material": "^5.2.4",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.3",
     "email-validator": "^2.0.4",
-    "ethers": "^5.5.4",
+    "ethers": "^5.6.0",
     "graphql": "^16.3.0",
     "history": "^5.1.0",
     "luxon": "^2.3.1",
