--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^5.6.0",
     "graphql": "^16.3.0",
     "history": "^5.1.0",
+    "jwt-decode": "^3.1.2",
     "luxon": "^2.3.1",
     "next": "^12.1.0",
     "polished": "^4.1.3",
