--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@ensdomains/ens-avatar": "^0.1.1",
     "@mantine/core": "^4.0.7",
+    "@mantine/dates": "^4.0.8",
+    "@mantine/dropzone": "^4.0.8",
+    "@mantine/form": "^4.0.8",
     "@mantine/hooks": "^4.0.7",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.3",
+    "dayjs": "^1.11.0",
     "email-validator": "^2.0.4",
     "ethers": "^5.6.0",
     "graphql": "^16.3.0",
@@ -28,8 +32,10 @@
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
     "swr": "^1.1.1",
+    "tabler-icons-react": "^1.41.0",
     "urql": "^2.0.6",
-    "web3modal": "^1.9.4"
+    "web3modal": "^1.9.4",
+    "zod": "^3.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
