Add sentry & error boundary

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_SENTRY_DSN='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 NEXT_PUBLIC_REACT_APP_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxx';
 NEXT_PUBLIC_REACT_APP_REDIRECT_URI='http://localhost:3000';
 NEXT_PUBLIC_GITPOAP_API_URL = 'http://localhost:3001';
