--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@ensdomains/ens-avatar": "^0.1.1",
-    "@mantine/core": "^4.0.7",
+    "@mantine/core": "^4.0.8",
     "@mantine/dates": "^4.0.8",
     "@mantine/dropzone": "^4.0.8",
     "@mantine/form": "^4.0.8",
-    "@mantine/hooks": "^4.0.7",
+    "@mantine/hooks": "^4.0.8",
+    "@sentry/nextjs": "^6.19.2",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.3",
     "dayjs": "^1.11.0",
