fixes for sentry

--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
 defaults.org=gitpoap
-defaults.project=gitpoap-fe-staging
+defaults.project=gitpoap-fe
 cli.executable=../../../../.npm/_npx/a8388072043b4cbc/node_modules/@sentry/cli/bin/sentry-cli
