--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "history": "^5.1.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^2.3.1",
-    "next": "^12.1.0",
+    "next": "^12.1.4",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -58,7 +58,7 @@
     "buffer": "^6.0.3",
     "chromatic": "^6.4.3",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^12.1.2",
     "eslint-plugin-storybook": "^0.5.7",
     "jest": "^27.5.1",
     "msw": "^0.38.1",
