--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/dropzone": "^4.0.8",
     "@mantine/form": "^4.0.8",
     "@mantine/hooks": "^4.0.8",
+    "@mantine/notifications": "^4.1.1",
     "@sentry/nextjs": "^6.19.2",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.3",
@@ -32,7 +33,6 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
-    "swr": "^1.1.1",
     "tabler-icons-react": "^1.41.0",
     "urql": "^2.0.6",
     "web3modal": "^1.9.4",
