--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-rewards": "^2.0.3",
     "styled-components": "^5.3.5",
     "urql": "^2.2.2",
     "web3modal": "^1.9.8",
