--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.0.5",
     "@ensdomains/ens-avatar": "^0.1.1",
-    "@mantine/core": "^4.2.2",
-    "@mantine/dates": "^4.2.2",
-    "@mantine/dropzone": "^4.2.2",
-    "@mantine/form": "^4.2.2",
-    "@mantine/hooks": "^4.2.2",
-    "@mantine/next": "^4.2.2",
-    "@mantine/notifications": "^4.2.2",
+    "@mantine/core": "^4.2.5",
+    "@mantine/dates": "^4.2.5",
+    "@mantine/dropzone": "^4.2.5",
+    "@mantine/form": "^4.2.5",
+    "@mantine/hooks": "^4.2.5",
+    "@mantine/next": "^4.2.5",
+    "@mantine/notifications": "^4.2.5",
     "@sentry/nextjs": "^6.19.7",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.7",
@@ -33,7 +33,7 @@
     "history": "^5.1.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^2.3.1",
-    "next": "^12.1.4",
+    "next": "^12.1.6",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -59,7 +59,7 @@
     "@storybook/theming": "^6.4.20",
     "@types/luxon": "^1.26.4",
     "@types/node": "16.11.13",
-    "@types/react": "17.0.37",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.3",
@@ -80,6 +80,10 @@
     "stream-http": "^3.2.0",
     "swc": "^1.0.11",
     "typescript": "4.6.3"
+  },
+  "resolutions": {
+    "@types/react": "<18.0.0",
+    "@types/react-dom": "<18.0.0"
   },
   "msw": {
     "workerDirectory": "public"
