--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.0.5",
     "@ensdomains/ens-avatar": "^0.1.1",
-    "@mantine/core": "^4.2.5",
-    "@mantine/dates": "^4.2.5",
-    "@mantine/dropzone": "^4.2.5",
-    "@mantine/form": "^4.2.5",
-    "@mantine/hooks": "^4.2.5",
-    "@mantine/next": "^4.2.5",
-    "@mantine/notifications": "^4.2.5",
+    "@mantine/core": "^4.2.6",
+    "@mantine/dates": "^4.2.6",
+    "@mantine/dropzone": "^4.2.6",
+    "@mantine/form": "^4.2.6",
+    "@mantine/hooks": "^4.2.6",
+    "@mantine/next": "^4.2.6",
+    "@mantine/notifications": "^4.2.6",
     "@sentry/nextjs": "^6.19.7",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.7",
@@ -35,8 +35,8 @@
     "luxon": "^2.3.1",
     "next": "^12.1.6",
     "polished": "^4.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.5",
     "urql": "^2.0.6",
@@ -61,7 +61,7 @@
     "@types/node": "16.11.13",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
     "chromatic": "^6.4.3",
