--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^3.1.2",
     "luxon": "^2.3.1",
     "next": "^12.1.6",
+    "next-urql": "^3.3.2",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
