--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "luxon": "^2.3.1",
     "next": "^12.1.6",
     "next-urql": "^3.3.2",
+    "nextjs-progressbar": "^0.0.14",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
