--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "chromatic": "npx chromatic --project-token=17617c85151f",
     "analyze": "ANALYZE=true next build",
     "gql:generate-dev": "graphql-codegen --config codegen-dev.yml",
-    "gql:generate": "graphql-codegen --config codegen.yml"
+    "gql:generate": "graphql-codegen --config codegen.yml",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.0.5",
@@ -71,7 +72,9 @@
     "eslint": "8.18.0",
     "eslint-config-next": "^12.2.0",
     "eslint-plugin-storybook": "^0.5.13",
+    "husky": ">=6",
     "jest": "^27.5.1",
+    "lint-staged": ">=10",
     "msw": "^0.42.3",
     "msw-storybook-addon": "^1.6.1",
     "os-browserify": "^0.3.0",
@@ -90,5 +93,11 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
