--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.4.0",
     "react-rewards": "^2.0.3",
     "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
     "urql": "^2.2.2",
     "web3modal": "^1.9.8",
     "zod": "^3.17.3"
