--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "urql": "^2.2.2",
+    "uuid": "^8.3.2",
     "web3modal": "^1.9.8",
     "zod": "^3.17.3"
   },
@@ -67,6 +68,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
     "chromatic": "^6.4.3",
