Create new banner for onboarding form (#80)
* feat: switch info hex to link to onboarding flow

* feat: create more Title shared components

* fix: add KeyboardEvent type to handlers in useKeyPress

* fix: remove unused SubHeader component

* refactor: split out shared button style overrides

* feat: create new version of home page banner

* feat: add command to run dev with the prod api

* fix: improve grammar for How it works section on home page

* refactor: increase font size, update copy, and add button min-widths on Banner

* refactor: adjust columns for BannerSection

* refactor: define Button styles in a single place

* feat: start github auth flow on click for CTA button

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:prod-api": "NEXT_PUBLIC_GITPOAP_API_URL=https://api.gitpoap.io next dev",
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
