Upgrade Mantine to v5 (#83)
* feat: update packages including mantine & react

* fix: footer props for styled-components

* fix: Group -> Stack & zodResolver key in mantine's useForm

* fix: dropdown children accepted types

* fix: convert popovers to use Popover.Target

* fix: improve generic types passed to styled mantine components

* fix: update types & styles for shared inputs

* fix: update button styling logic

* fix: fix mantine type issues in codes admin page

* fix: update import mechanism for shared Radio component

* refactor: improvements to FeedbackButton

* fix: upgrade collapsibleAddress component

* fix: upgrade Share component

* feat: introduce mantine theme

* fix: upgrade CopyableText component

* feat: remove Links from InfoHexSummary & get user to navigate to profile instead

* fix: increase z-index on FeedbackButton target

* fix: wrap FiGlobe in forwardRef to allay next Link

* fix: update mechanism to pass certain styles to shared Select component

* fix: render mobile collapse menu via SSR

* fix: explicitly set leaderboard visibility checkbox state via null coalesce

* fix: add correct typing and use proper interfaces in new onboarding form for mantine v5

* fix: move theme out of the pages dir

* fix: add ref for finer control in AuthContext; due to react 18 strict mode dev changes (runs hooks twice initially)

* fix: more mantine type and console errors

* fix: improvements to useKeyPress to fix double / typing bug

--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=17617c85151f",
     "analyze": "ANALYZE=true next build",
     "gql:generate-dev": "graphql-codegen --config codegen-dev.yml",
     "gql:generate": "graphql-codegen --config codegen.yml",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^3.0.5",
+    "@coinbase/wallet-sdk": "^3.4.2",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
     "@ensdomains/ens-avatar": "^0.1.6",
-    "@mantine/core": "^4.2.12",
-    "@mantine/dates": "^4.2.12",
-    "@mantine/dropzone": "^4.2.12",
-    "@mantine/form": "^4.2.12",
-    "@mantine/hooks": "^4.2.12",
-    "@mantine/next": "^4.2.12",
-    "@mantine/notifications": "^4.2.12",
-    "@sentry/nextjs": "^7.3.1",
+    "@mantine/core": "^5.1.6",
+    "@mantine/dates": "^5.1.6",
+    "@mantine/dropzone": "^5.1.6",
+    "@mantine/form": "^5.1.6",
+    "@mantine/hooks": "^5.1.6",
+    "@mantine/next": "^5.1.6",
+    "@mantine/notifications": "^5.1.6",
+    "@sentry/nextjs": "^7.10.0",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.7",
     "buffer": "^6.0.3",
@@ -39,8 +40,8 @@
     "next-urql": "^3.3.3",
     "nextjs-progressbar": "^0.0.14",
     "polished": "^4.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-rewards": "^2.0.3",
     "styled-components": "^5.3.5",
@@ -56,23 +57,22 @@
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-operations": "2.4.2",
     "@graphql-codegen/typescript-urql": "^3.5.12",
-    "@storybook/addon-actions": "^6.5.5",
-    "@storybook/addon-essentials": "^6.5.5",
-    "@storybook/addon-links": "^6.5.5",
-    "@storybook/addons": "^6.5.5",
-    "@storybook/builder-webpack5": "^6.5.5",
-    "@storybook/manager-webpack5": "^6.5.5",
-    "@storybook/react": "^6.5.5",
-    "@storybook/theming": "^6.5.5",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addons": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@storybook/theming": "^6.5.10",
     "@types/luxon": "^2.3.2",
     "@types/node": "16.11.13",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.25",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
-    "babel-plugin-styled-components": "^2.0.2",
-    "chromatic": "^6.4.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.18.0",
     "eslint-config-next": "^12.2.0",
     "eslint-plugin-storybook": "^0.5.13",
@@ -82,8 +82,8 @@
     "msw": "^0.42.3",
     "msw-storybook-addon": "^1.6.1",
     "os-browserify": "^0.3.0",
-    "react-test-renderer": "^17.0.2",
-    "sb": "^6.4.14",
+    "react-test-renderer": "^18.2.0",
+    "sb": "^6.5.10",
     "source-map-explorer": "^2.5.2",
     "storybook-addon-next-router": "^3.1.1",
     "stream-browserify": "^3.0.0",
@@ -92,8 +92,8 @@
     "typescript": "4.7.4"
   },
   "resolutions": {
-    "@types/react": "<18.0.0",
-    "@types/react-dom": "<18.0.0"
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6"
   },
   "msw": {
     "workerDirectory": "public"
