Add unit testing infrastructure (#100)
* chore: add jest and related packages

* chore: update configs

* fix: update types and remove any from Web3ContextProvider

* fix: remove more any

* chore: add jest-styled-components

* test: add first tests for Button

* fix: remove any

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,12 @@
 {
-  "extends": "next/core-web-vitals",
+  "plugins": ["@typescript-eslint"],
+  "extends": ["next/core-web-vitals", "plugin:jest-dom/recommended", "prettier"],
+  "ignorePatterns": ["**/generated-gql.tsx", "/node_modules/"],
   "rules": {
     "react/display-name": "off",
     "no-console": ["warn", { "allow": ["warn", "error"] }],
     "prefer-const": "warn",
-    "spaced-comment": ["error", "always", { "markers": ["/"] }]
+    "spaced-comment": ["error", "always", { "markers": ["/"] }],
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
