--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "analyze": "ANALYZE=true next build",
     "gql:generate-dev": "graphql-codegen --config codegen-dev.yml",
     "gql:generate": "graphql-codegen --config codegen.yml",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --verbose",
+    "test:ci": "jest --ci --verbose"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.4.2",
@@ -65,19 +67,29 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/theming": "^6.5.10",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.8",
     "@types/luxon": "^2.3.2",
     "@types/node": "16.11.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.18.0",
     "eslint-config-next": "^12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-storybook": "^0.5.13",
     "husky": ">=6",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-styled-components": "^7.1.0",
     "lint-staged": ">=10",
     "msw": "^0.42.3",
     "msw-storybook-addon": "^1.6.1",
@@ -89,6 +101,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "swc": "^1.0.11",
+    "ts-jest": "^28.0.8",
     "typescript": "4.7.4"
   },
   "resolutions": {
