--- a/.github/workflows/fe-testing.yml
+++ b/.github/workflows/fe-testing.yml
@@ -1,8 +1,6 @@
-name: Run frontend test action
+name: Frontend Testing Suite
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -12,7 +10,8 @@ env:
   NEXT_PUBLIC_SENTRY_ENVIRONMENT: test
 
 jobs:
-  test:
+  run-tests:
+    name: Run Frontend Test Suite
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,4 +26,3 @@ jobs:
       - run: yarn install --frozen-lockfile --check-files
       - name: Test Frontend
         run: yarn test:ci
-
