--- a/.github/workflows/fe-testing.yml
+++ b/.github/workflows/fe-testing.yml
@@ -15,14 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: install packages
-        run: yarn install
-
       - uses: actions/setup-node@v2
         with:
           node-version: '16.14.2'
           cache: yarn
-      - run: yarn install --frozen-lockfile --check-files
+      - name: Install packages via yarn
+        run: yarn install --frozen-lockfile --check-files
       - name: Test Frontend
         run: yarn test:ci
