feat: lint __tests__ dir (#141)

--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "workerDirectory": "public"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
+    "{src,__tests__}/**/*.{ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ]
