--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-rewards": "^2.0.4",
+    "sharp": "^0.31.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "urql": "^3.0.1",
