--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:ci": "jest --ci --verbose"
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^3.4.2",
+    "@coinbase/wallet-sdk": "^3.5.2",
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@ensdomains/ens-avatar": "^0.1.6",
@@ -60,14 +60,14 @@
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-operations": "2.4.2",
     "@graphql-codegen/typescript-urql": "^3.5.12",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/addons": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@storybook/theming": "^6.5.10",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/addons": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "@storybook/theming": "^6.5.12",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -88,7 +88,7 @@
     "eslint-config-next": "^12.2.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest-dom": "^4.0.2",
-    "eslint-plugin-storybook": "^0.5.13",
+    "eslint-plugin-storybook": "^0.6.4",
     "husky": ">=6",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
@@ -98,18 +98,29 @@
     "msw-storybook-addon": "^1.6.1",
     "os-browserify": "^0.3.0",
     "react-test-renderer": "^18.2.0",
-    "sb": "^6.5.10",
+    "sb": "^6.5.12",
     "source-map-explorer": "^2.5.2",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "storybook-addon-next-router": "^3.1.1",
+    "storybook-addon-swc": "^1.1.8",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "swc": "^1.0.11",
     "ts-jest": "^28.0.8",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "url": "^0.11.0"
   },
   "resolutions": {
     "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "webpack": "^5.74.0",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-virtual-modules": "^0.4.5"
   },
   "msw": {
     "workerDirectory": "public"
