--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@emotion/jest": "^11.10.0",
     "@graphql-codegen/cli": "2.6.4",
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-operations": "2.4.2",
