--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@ensdomains/ens-avatar": "^0.1.6",
-    "@mantine/core": "^5.2.3",
-    "@mantine/dates": "^5.2.3",
-    "@mantine/dropzone": "^5.2.3",
-    "@mantine/form": "^5.2.3",
-    "@mantine/hooks": "^5.2.3",
-    "@mantine/next": "^5.2.3",
-    "@mantine/notifications": "^5.2.3",
+    "@mantine/core": "^5.4.2",
+    "@mantine/dates": "^5.4.2",
+    "@mantine/dropzone": "^5.4.2",
+    "@mantine/form": "^5.4.2",
+    "@mantine/hooks": "^5.4.2",
+    "@mantine/next": "^5.4.2",
+    "@mantine/notifications": "^5.4.2",
     "@sentry/nextjs": "^7.10.0",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.8.0",
@@ -108,8 +108,11 @@
     "stream-http": "^3.2.0",
     "swc": "^1.0.11",
     "ts-jest": "^28.0.8",
-    "typescript": "4.7.4",
+    "typescript": "4.8.4",
     "url": "^0.11.0"
+  },
+  "engines": {
+    "yarn": "1.22.*"
   },
   "resolutions": {
     "@types/react": "^18.0.17",
