--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
+    "sb": "yarn storybook",
     "build-storybook": "build-storybook",
     "analyze": "ANALYZE=true next build",
     "gql:generate-dev": "graphql-codegen --config codegen-dev.yml",
@@ -27,7 +28,7 @@
     "@mantine/hooks": "^5.6.3",
     "@mantine/next": "^5.6.3",
     "@mantine/notifications": "^5.6.3",
-    "@sentry/nextjs": "^7.10.0",
+    "@sentry/nextjs": "^7.17.4",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "buffer": "^6.0.3",
@@ -37,22 +38,22 @@
     "graphql": "^16.6.0",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
-    "luxon": "^3.0.1",
+    "luxon": "^3.1.0",
     "next": "^12.2.5",
     "next-urql": "^4.0.0",
-    "nextjs-progressbar": "^0.0.14",
+    "nextjs-progressbar": "^0.0.16",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.6.0",
     "react-rewards": "^2.0.4",
     "sharp": "^0.31.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
-    "urql": "^3.0.1",
+    "urql": "^3.0.3",
     "uuid": "^8.3.2",
     "web3modal": "^1.9.8",
-    "zod": "^3.17.3"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -73,7 +74,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^28.1.8",
+    "@types/jest": "^29.2.2",
     "@types/luxon": "^2.3.2",
     "@types/node": "16.11.13",
     "@types/react": "^18.0.17",
@@ -81,17 +82,17 @@
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "^12.2.0",
+    "eslint": "8.26.0",
+    "eslint-config-next": "^13.0.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest-dom": "^4.0.2",
-    "eslint-plugin-storybook": "^0.6.4",
+    "eslint-plugin-storybook": "^0.6.7",
     "husky": ">=6",
-    "jest": "^28.1.3",
+    "jest": "^29.2.2",
     "jest-environment-jsdom": "^28.1.3",
     "jest-styled-components": "^7.1.0",
     "lint-staged": ">=10",
@@ -107,7 +108,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "swc": "^1.0.11",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.0.3",
     "typescript": "4.8.4",
     "url": "^0.11.0"
   },
