--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mantine/next": "^5.6.3",
     "@mantine/notifications": "^5.6.3",
     "@sentry/nextjs": "^7.17.4",
+    "@types/papaparse": "^5.3.5",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "buffer": "^6.0.3",
@@ -42,6 +43,7 @@
     "next": "^12.2.5",
     "next-urql": "^4.0.0",
     "nextjs-progressbar": "^0.0.16",
+    "papaparse": "^5.3.2",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
