--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@mantine/next": "^5.6.3",
     "@mantine/notifications": "^5.6.3",
     "@sentry/nextjs": "^7.17.4",
-    "@types/papaparse": "^5.3.5",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "buffer": "^6.0.3",
@@ -82,6 +81,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/papaparse": "^5.3.5",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
@@ -91,7 +91,9 @@
     "eslint": "8.26.0",
     "eslint-config-next": "^13.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.7",
     "husky": ">=6",
     "jest": "^29.2.2",
