feat: add env vars

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 NEXT_PUBLIC_SENTRY_DSN='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 NEXT_PUBLIC_SENTRY_ENVIRONMENT='development'
+SENTRY_AUTH_TOKEN='sentry_auth_token'
+NEXT_PUBLIC_INFURA_ID='xxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 NEXT_PUBLIC_REACT_APP_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxx';
 NEXT_PUBLIC_GITPOAP_API_URL = 'http://localhost:3001';
+NEXT_PUBLIC_DISCORD_CLIENT_ID=xxxxxxxxxxxxxxxxxxx
