--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "test:ci": "jest --ci --verbose"
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^3.5.2",
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@ensdomains/ens-avatar": "^0.1.6",
@@ -30,13 +29,17 @@
     "@mantine/notifications": "^5.6.3",
     "@sentry/nextjs": "^7.17.4",
     "@ukstv/jazzicon-react": "^1.0.0",
-    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.14",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.0",
     "email-validator": "^2.0.4",
     "ethers": "^5.7.0",
     "graphql": "^16.6.0",
     "history": "^5.3.0",
+    "idb-keyval": "^6.2.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.1.0",
     "next": "^12.2.5",
@@ -53,7 +56,6 @@
     "swr": "^1.3.0",
     "urql": "^3.0.3",
     "uuid": "^8.3.2",
-    "web3modal": "^1.9.8",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -78,10 +80,10 @@
     "@types/jest": "^29.2.2",
     "@types/luxon": "^2.3.2",
     "@types/node": "16.11.13",
+    "@types/papaparse": "^5.3.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
-    "@types/papaparse": "^5.3.5",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
