--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mantine/hooks": "^5.6.3",
     "@mantine/next": "^5.6.3",
     "@mantine/notifications": "^5.6.3",
+    "@metamask/detect-provider": "^2.0.0",
     "@sentry/nextjs": "^7.17.4",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@web3-react/core": "^6.1.9",
