--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/dropzone": "^5.6.3",
     "@mantine/form": "^5.6.3",
     "@mantine/hooks": "^5.6.3",
+    "@mantine/modals": "^5.9.4",
     "@mantine/next": "^5.6.3",
     "@mantine/notifications": "^5.6.3",
     "@metamask/detect-provider": "^2.0.0",
