--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "test:ci": "jest --ci --verbose"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@ensdomains/ens-avatar": "^0.1.6",
-    "@mantine/core": "^5.6.3",
-    "@mantine/dates": "^5.6.3",
-    "@mantine/dropzone": "^5.6.3",
-    "@mantine/form": "^5.6.3",
-    "@mantine/hooks": "^5.6.3",
+    "@mantine/core": "^5.9.4",
+    "@mantine/dates": "^5.9.4",
+    "@mantine/dropzone": "^5.9.4",
+    "@mantine/form": "^5.9.4",
+    "@mantine/hooks": "^5.9.4",
     "@mantine/modals": "^5.9.4",
-    "@mantine/next": "^5.6.3",
-    "@mantine/notifications": "^5.6.3",
+    "@mantine/next": "^5.9.4",
+    "@mantine/notifications": "^5.9.4",
     "@metamask/detect-provider": "^2.0.0",
-    "@sentry/nextjs": "^7.17.4",
+    "@next/bundle-analyzer": "^13.0.6",
+    "@sentry/nextjs": "^7.26.0",
     "@ukstv/jazzicon-react": "^1.0.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
@@ -44,8 +44,8 @@
     "idb-keyval": "^6.2.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.1.0",
-    "next": "^12.2.5",
-    "next-urql": "^4.0.0",
+    "next": "^13.0.6",
+    "next-urql": "^4.0.2",
     "nextjs-progressbar": "^0.0.16",
     "papaparse": "^5.3.2",
     "polished": "^4.2.2",
@@ -93,7 +93,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.26.0",
-    "eslint-config-next": "^13.0.2",
+    "eslint-config-next": "^13.0.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-jest-dom": "^4.0.2",
