--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,13 @@
     "jsx": "preserve",
     "incremental": true,
     "downlevelIteration": true,
-    "types": ["jest", "node", "@types/testing-library__jest-dom"]
+    "types": ["jest", "node", "@types/testing-library__jest-dom"],
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
