feat: add amplitude for analytics (#263)
* chore: add mixpanel-browser to package.json

* feat: create environment.ts file and proofread env variable related code

* feat: integrate mixpanel into setup flow & create separate function for app setup

* feat: add tracking functions to the site

* chore: actually add the tracking functions themselves

* chore: add page title to Custom404 page

* refactor: rename ConnectWallet to ConnectWalletButton

* config: add dev token for mixpanel

* feat: include user data within tracking event payloads

* test: mock out mixpanel-browser

* fix: fix import error

* feat: switch mixpanel for amplitude

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_PUBLIC_INFURA_ID='xxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 NEXT_PUBLIC_REACT_APP_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxx';
 NEXT_PUBLIC_GITPOAP_API_URL = 'http://localhost:3001';
 NEXT_PUBLIC_DISCORD_CLIENT_ID=xxxxxxxxxxxxxxxxxxx
+NEXT_PUBLIC_AMPLITUDE_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
