--- a/package.json
+++ b/package.json
@@ -30,12 +30,9 @@
     "@mantine/notifications": "^5.9.4",
     "@metamask/detect-provider": "^2.0.0",
     "@next/bundle-analyzer": "^13.0.6",
+    "@privy-io/react-auth": "^1.11.0",
     "@sentry/nextjs": "^7.26.0",
     "@ukstv/jazzicon-react": "^1.0.0",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.13",
-    "@web3-react/walletlink-connector": "^6.2.14",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.0",
     "email-validator": "^2.0.4",
